syntax = "proto3";
package proto;

option go_package = "./protocol";

message Connect {
  string prefix = 1;
  string public_url = 2;
  int64 expire = 3;
}

message ServerFull {
}

message SessionExpired {
}

message Header {
  string key = 1;
  repeated string value = 2;
}

message BodyChunk {
  string uuid = 1;
  bytes body = 2;
  bool eof = 3;
}

message Cookie {
  string name = 1;
  string value = 2;
  string path = 3;
  string domain = 4;
  int64 expires = 5;
  int32 max_age = 6;
  bool secure = 7;
  bool http_only = 8;
}

message HttpRequest {
  string uuid = 1;
  string proto = 2;
  string method = 3;
  string uri = 4;
  int64 content_length = 5;
  repeated Cookie cookies = 6;
  repeated Header header = 7;
  string remote_addr = 8;
}

message HttpResponse {
  string uuid = 1;
  string proto = 2;
  int32 status = 3;
  int64 content_length = 4;
  repeated Header header = 5;
}

message Transfer {
  oneof Command {
    Connect connect = 1;
    HttpRequest http_request = 2;
    HttpResponse http_response = 3;
    SessionExpired session_expired = 4;
    ServerFull server_full = 5;
    BodyChunk body_chunk = 6;
  }
}